--- a/_config.yml
+++ b/_config.yml
@@ -3,21 +3,18 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Jiashu
+first_name: Mingxuan
 middle_name:
-last_name: Xu (徐家澍)
-email: jxu1@g.harvard.edu
+last_name: Yan (阎明轩)
+email: mingxuanyan99@outlook.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Personal website for Jiashu Xu
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+  Personal website of Mingxuan Yan
+footer_text: 
+keywords:  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🌌🔥 # the emoji used as the favicon
-url: https://cnut1648.github.io/ # the base hostname & protocol for your site
+url: https://WaterHyacinthInNANHU.github.io/ # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -66,13 +63,13 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: cnut1648 # your GitHub user name
+github_username: WaterhyacinthInNANHU # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: JiashuXu2 # your Twitter handle
-linkedin_username: jiashu-xu # your LinkedIn user name
-scholar_userid: 0uYehJsAAAAJ # your Google Scholar ID
-semanticscholar_id: 2110519123 # your Semantic Scholar ID
-orcid_id: 0000-0003-4093-2315 # your ORCID ID
+twitter_username:  # your Twitter handle
+linkedin_username:  # your LinkedIn user name
+scholar_userid: RekiP-gAAAAJ # your Google Scholar ID
+semanticscholar_id:  # your Semantic Scholar ID
+orcid_id: 0000-0002-9648-8308 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
@@ -221,8 +218,8 @@ display_tags: null # this tags will be dispalyed on the front page of your blog
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [ Xu, Xu* ]
-  first_name: [ Jiashu, J., Jiashu* ]
+  last_name: [ Yan ]
+  first_name: [ Mingxuan ]
 
   style: apa
   locale: en
