--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Mingxuan
 middle_name:
 last_name: Yan
 # last_name: Yan
-email: mingxuanyan99@outlook.com
+email: myan035@ucr.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Personal website of Mingxuan Yan
 footer_text: 
